# matthew

./: .gitignore  CONSTITUTION.md  README.md  package-lock.json  package.json  tailwind.config.js
.agents/skills/embedding-pipeline/: SKILL.md
.agents/skills/frontend-ui/: SKILL.md
.agents/skills/pdf-ingestion/: SKILL.md
.agents/skills/project-architecture/: SKILL.md
.agents/skills/rust-backend/: SKILL.md
.github/workflows/: release.yml
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
specs/001-custom-model-path/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-custom-model-path/checklists/: requirements.md  ux.md
specs/001-custom-model-path/contracts/: commands.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chats.rs  ingest.rs  libraries.rs  mod.rs  query.rs  setup.rs
src-tauri/src/db/: mod.rs  schema.rs  store.rs
src-tauri/src/embed/: engine.rs  mod.rs
src-tauri/src/pdf/: extractor.rs  mod.rs
src/components/layout/: Shell.tsx
src/components/shared/: ChunkPresetSelector.tsx  ConnectionDot.tsx  RetrievalControl.tsx
src/hooks/: useIngest.ts  useLibraries.ts  useQuery.ts
src/lib/: tauri.ts
src/tabs/: Explore.tsx  Import.tsx  Libraries.tsx  Settings.tsx
src/types/: index.ts
