[package]
name = "matthew"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matthew_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                 = { version = "2", features = ["default"] }
keyring               = "2"
tauri-plugin-dialog   = "2"
lancedb               = "0.26"
lance-arrow           = "2.0"
arrow                 = "57"
arrow-array           = "57"
arrow-schema          = "57"
fastembed             = "5"
pdf-extract           = "0.7"
sysinfo               = "0.30"
dirs                  = "5"
tokio                 = { version = "1", features = ["full"] }
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
uuid                  = { version = "1", features = ["v4"] }
sha2                  = "0.10"
anyhow                = "1"
futures               = "0.3"
chrono                = { version = "0.4", features = ["serde"] }
reqwest               = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

